--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: monospace;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -10,7 +14,7 @@ body {
     display: flex;
     border: 2px solid black;
     height: 500px;
-    width: 375px;
+    width: 300px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -40,5 +44,21 @@ body {
     width: 100%;
     height: 300px;
     margin: 10px;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#butt-cont div {
+    border: 1px solid;
+    font-size: xx-large;
+}
+
+#col {
+    display: flex;
+    width: 100%; 
+    border: 1px solid; 
+    justify-content: center;
+    height: 100%; 
+    align-items: center; 
+    gap: 20px;
 }
