--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     align-items: flex-end;
 }
 
-#disp-text {
+#num-disp {
     font-family: monospace;
     padding: 0px;
     margin: 0px;
@@ -53,12 +53,22 @@ body {
     font-size: xx-large;
 }
 
-#col {
+.col {
     display: flex;
     width: 100%; 
-    border: 1px solid; 
     justify-content: center;
     height: 100%; 
     align-items: center; 
-    gap: 20px;
+    gap: 40px;
+    flex-direction: row;
+}
+
+.butt {
+    display: flex;
+    border-radius: 10px;
+    width: 150px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 5px;
 }
