--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ body {
 
 #butt-cont {
     display: flex;
-    border: 1px solid black;
     width: 100%;
     height: 300px;
     margin: 10px;
@@ -59,8 +58,8 @@ body {
     justify-content: center;
     height: 100%; 
     align-items: center; 
-    gap: 40px;
     flex-direction: row;
+    gap: 5px;
 }
 
 .butt {
@@ -70,5 +69,10 @@ body {
     height: 50px;
     justify-content: center;
     align-items: center;
-    padding: 2px 5px;
+    padding: 0px 5px;
+}
+
+#bksp {
+    width: 50%;
+    height: 50px;
 }
