--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
     font-size: xx-large;
 }
 
-.col {
+.butt-row {
     display: flex;
     width: 100%; 
     justify-content: center;
@@ -72,7 +72,13 @@ body {
     padding: 0px 5px;
 }
 
+#bksp-cont {
+    width: fit-content;
+    border: none;
+}
+
 #bksp {
-    width: 50%;
+    width: 100%;
     height: 50px;
+    border
 }
